# JaDead-BIB

./: .gitignore  ARCHITECTURE_GCPlus_JaDead-BIB.md  ARCHITECTURE_JaDead-BIB.md  Cargo.toml  FizzBuzz.java  Jugador.java  LICENSE  PROMPT_MAESTRO_v2.md  README.md  TestLoop.java  reportes.md
abi_translators/: Cargo.toml  README.md
abi_translators/src/: lib.rs  main.rs
abi_translators/src/core/: context.rs  ir.rs  mod.rs  registry.rs  translator.rs
abi_translators/src/cpu/: elf.rs  mod.rs  pe.rs
abi_translators/src/gpu/: dxil.rs  mod.rs  spirv.rs
abi_translators/src/utils/: binary_reader.rs  mod.rs  symbol_table.rs  x86_decoder.rs
java_test/: Jugador.java  test_array.java  test_oop_fields.java  test_string.java
java_test/gpu/: test_dx12_init.java  test_gpu_auto.java  test_opengl_init.java  test_vulkan_init.java
java_test/gpu/cubes/dx12/: CubeDX12.java
java_test/gpu/cubes/opengl/: CubeOpenGL.java
java_test/gpu/cubes/vulkan/: CubeVulkan.java
src/rust/: builder.rs  lib.rs  main.rs
src/rust/backend/: isa.rs  jit.rs  mod.rs  pe.rs
src/rust/backend/gpu/: cuda.rs  dx12.rs  dx12_cube.rs  gl_cube.rs  mod.rs  opengl.rs  vk_cube.rs  vulkan.rs  window.rs
src/rust/backend/output/: elf.rs  mod.rs  (+1 more)
src/rust/frontend/: mod.rs
src/rust/gc_plus/: cycle_breaker.rs  engine.rs  escape_detector.rs  loop_anticipator.rs  mod.rs  region_memory.rs  scope_tracker.rs
src/rust/isa/: mod.rs
src/rust/middle/: ir.rs  ja_ir.rs  mod.rs  strict_type_checker.rs  ub_detector.rs
src/rust/preprocessor/: resolver.rs
src/rust/stdlib/: mod.rs
src/rust/toolchain/: mod.rs
(+17 files in other folders)
